k8s/30-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organicsr
  namespace: organicsr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - manuel.stoegerer-home.cloud
      secretName: organicsr-tls
  rules:
    - host: manuel.stoegerer-home.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: organicsr
                port:
                  number: 80
